# tectonic_sim

./: .gitignore  Cargo.toml
src/: main.rs  setup.rs
src/debug/: mod.rs  ui.rs
src/debug/visualization/: mod.rs  normal_vector.rs  polygon.rs  sphere_grid.rs  svg.rs
src/math/: error.rs  mod.rs  scalar_field.rs  utils.rs
src/math/algorithms/: boolean.rs  clipping.rs  convex_hull.rs  marching_squares.rs  mod.rs  triangulation.rs
src/math/algorithms/metaballs/: builder.rs  field.rs  metaballs.rs  mod.rs
src/math/algorithms/point_relaxation/: lloyd.rs  mod.rs
src/math/algorithms/smoothing/: bezier.rs  catmull_rom.rs  chaikin.rs  mod.rs  traits.rs
src/math/geometry/: mod.rs
src/math/geometry/metalballs/: builder.rs  components.rs  field.rs  influence.rs  marching_squares.rs  metalballs.rs  mod.rs
src/math/geometry/polygon/: builder.rs  core.rs  mod.rs  properties.rs  validation.rs
src/math/geometry/sphere/: coordinates.rs  mod.rs  projection.rs  rotation.rs  sampling.rs
src/math/geometry/voronoi/: builder.rs  config.rs  lloyd.rs  merger.rs  mod.rs  triangulation.rs
src/math/point_distribution/: mod.rs
src/math/point_distribution/voronoi/: builder.rs  config.rs  error.rs  merger.rs  mod.rs  (+1 more)
src/math/polygon/: mod.rs  voronoi.rs
src/math/probability/: mod.rs  noise.rs
src/math/sphere/: algorithms.rs  mod.rs  projection.rs
src/math/types/: bool.rs  bounds.rs  mod.rs  point.rs  vector.rs
src/math/vector/: functions.rs
src/physics/: mod.rs
src/physics/geology/: mod.rs
src/physics/sim/: mod.rs  resources.rs  state.rs  systems.rs
(+62 files in other folders)
